<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:layout_width="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/whiteSmoke"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        android:minHeight="500dp"
    >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_name"
            android:layout_width="200dp"
            android:maxLength="40"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            android:inputType="textPersonName"
          />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_dob"
            android:hint="@string/dob"
            android:inputType="date"
            android:focusable="false"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_marginTop="30dp"
            android:id="@+id/spinner_document_type"
            android:hint="@string/select_one"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:backgroundTint="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            app:errorEnabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_doc_id"
            android:inputType="text"
            android:hint="@string/doc_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:textColor="@color/whiteSmoke"
            android:background="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

        </ScrollView>

</androidx.cardview.widget.CardView>
    
</LinearLayout>